--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,39 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 #root {
-  max-width: 1280px;
+  width: 100vw;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between
+}
+
+header {
+  background-color: #131313;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 5rem;
+  padding: 2rem 3rem;
+}
+
+header a {
+  color: #fff;
+  text-decoration: none;
+}
+
+footer {
+  background-color: #131313;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  height: 4rem;
+  padding: 2rem 3rem;
 }
