--- a/src/main.css
+++ b/src/main.css
@@ -74,6 +74,17 @@ nav {
   padding: 0.8rem;
 }
 
+input[type="number"] {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
 .quantity-button {
   padding: 0.8rem;
 }
