--- a/src/App.css
+++ b/src/App.css
@@ -11,20 +11,24 @@ body {
 #root {
   width: 100vw;
   margin: 0 auto;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between
 }
 
 header {
-  background-color: #131313;
+  background-color: #000;
   color: #fff;
+  font-size: 0.7rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 5rem;
-  padding: 2rem 3rem;
+  height: 6rem;
+  padding: 0 9rem;
 }
 
 header a {
@@ -34,7 +38,7 @@ header a {
 
 nav {
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .outlet {
