--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,6 @@ footer nav {
   color: #fff;
   display: flex;
   align-items: center;
-
   height: 39rem;
 }
 
@@ -158,6 +157,37 @@ footer nav {
 
 .hero-area h6 {
   opacity: 0.5;
+}
+
+.category-links {
+  display: flex;
+  gap: 2rem;
+  padding: 6rem 0 0;
+}
+
+.category-link {
+  position: relative;
+  text-align: center;
+  height: 18rem;
+  width: 22rem;
+}
+
+.category-link img {
+  height: 10rem;
+  position: absolute;
+  top: -4rem;
+  right: 5rem;
+}
+
+.category-name {
+  border-radius: 0.5rem;
+  background: #F1F1F1;
+  display: flex;
+  flex-direction: column;
+  height: 12.75rem;
+  width: 22rem;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 /* Shop page */
