--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,13 @@ h1 {
   margin-bottom: 2rem;
 }
 
+h2 {
+  font-size: 2.5rem;
+  line-height: 2.75rem;
+  letter-spacing: 0.08931rem;
+  margin-bottom: 1.5rem;
+}
+
 h4 {
   font-size: 1.75rem;
   letter-spacing: 0.125rem;
@@ -58,6 +65,10 @@ p {
   letter-spacing: 0.625rem;
   margin-bottom: 1rem;
   text-transform: uppercase;
+}
+
+.orange-text {
+  color: var(--orange);
 }
 
 button {
@@ -265,12 +276,11 @@ section:not(.hero-area) {
 }
 
 .black-area {
-  display: flex;
   gap: 1.5rem;
   justify-content: space-between;
 }
 
-.black-area>* {
+.black-area>*, .before-footer>* {
   border-radius: 0.5rem;
 }
 
@@ -281,6 +291,15 @@ section:not(.hero-area) {
   display: flex;
   align-items: center;
   padding-left: 6rem;
+}
+
+.before-footer {
+  gap: 7rem;
+  margin: 5rem 0 6rem;
+}
+
+.before-footer p {
+  opacity: 0.5;
 }
 
 /* Shop page */
