--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,13 @@ h2 {
   margin-bottom: 1.5rem;
 }
 
+h3 {
+  font-size: 2rem;
+  line-height: 2.25rem;
+  letter-spacing: 0.07144rem;
+  margin-bottom: 1.3rem;
+}
+
 h4 {
   font-size: 1.75rem;
   letter-spacing: 0.125rem;
@@ -368,13 +375,46 @@ footer svg:hover {
 }
 
 .product-page {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 4rem;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 6rem;
+}
+
+.product-page p, .product-page li {
+  opacity: 0.5;
 }
 
 .product-page img {
   width: 30rem;
+}
+
+.product-info {
+  width: 28rem;
+}
+
+.product-features {
+  width: 40rem;
+}
+
+.product-included {
+  align-self: flex-start;
+}
+
+.product-included ul {
+  line-height: 1.5625rem;
+  list-style-type: none;
+}
+
+.product-included .orange-text {
+  font-weight: 700;
+  margin-right: 1rem;
+  opacity: 1;
+}
+
+.button-wrap {
+  align-items: center;
+  display: flex;
+  gap: 1rem;
 }
 
 .quantity-wrap {
@@ -382,9 +422,19 @@ footer svg:hover {
   justify-content: center;
 }
 
+.item-quantity, .quantity-button {
+  background: #F1F1F1;
+  border: none;
+  height: 3rem;
+  width: 2.5rem;
+}
+
 .item-quantity {
-  border: 1px solid;
-  padding: 0.8rem;
+  text-align: center;
+}
+
+.quantity-button {
+  margin: 0;
 }
 
 input[type="number"] {
