--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ h6 {
 }
 
 p {
+  color: #7d7d7d;
   font-size: 0.9375rem;
   line-height: 1.5625rem;
   margin-bottom: 1rem;
@@ -345,7 +346,7 @@ footer svg:hover {
 }
 
 .before-footer p {
-  opacity: 0.5;
+  color: #7d7d7d;
 }
 
 /* Shop page */
@@ -380,8 +381,8 @@ footer svg:hover {
   gap: 6rem;
 }
 
-.product-page p, .product-page li {
-  opacity: 0.5;
+.product-page li {
+  color: #7d7d7d;
 }
 
 .product-page img {
@@ -408,7 +409,6 @@ footer svg:hover {
 .product-included .orange-text {
   font-weight: 700;
   margin-right: 1rem;
-  opacity: 1;
 }
 
 .button-wrap {
@@ -434,7 +434,12 @@ footer svg:hover {
 }
 
 .quantity-button {
+  color: #b5b5b5;
   margin: 0;
+}
+
+.quantity-button:hover {
+  color: var(--orange);
 }
 
 input[type="number"] {
