Add Cart component inside CartModal

--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@ h5 {
 h6 {
   font-size: 1.125rem;
   letter-spacing: 0.08038rem;
+  margin-bottom: 1rem;
 }
 
 p {
@@ -528,7 +529,8 @@ input[type=number]::-webkit-outer-spin-button {
 .cart-modal {
   border-radius: 0.5rem;
   background: #FFF;
-  padding: 1rem;
+  color: #000;
+  padding: 2rem;
   position: absolute;
   top: 8rem;
   right: 9rem;
