--- a/src/App.css
+++ b/src/App.css
@@ -548,6 +548,7 @@ input[type=number]::-webkit-outer-spin-button {
   background: rgba(0, 0, 0, 0.5);
   content: '';
   height: 100vh;
+  z-index: 1;
 }
 
 .cart-header, .cart-total-wrap {
