--- a/src/App.css
+++ b/src/App.css
@@ -444,7 +444,8 @@ footer svg:hover {
   justify-content: center;
 }
 
-.item-quantity, .quantity-button {
+.item-quantity,
+.quantity-button {
   background: #F1F1F1;
   border: none;
   height: 3rem;
@@ -551,7 +552,8 @@ input[type=number]::-webkit-outer-spin-button {
   z-index: 1;
 }
 
-.cart-header, .cart-total-wrap {
+.cart-header,
+.cart-total-wrap {
   display: flex;
   align-items: center;
   justify-content: space-between;
